[package]
name = "setget"
version = "0.1.0"
authors = ["jani chirag.empiric@gmail.com"]
edition = "2021"
description = "A crate for creating and managing users. This is created to learn about how to create and publish crates."
repository = "https://github.com/chirag-empiric/setget.git"

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
